--- a/_sass/base/_prod-line.scss
+++ b/_sass/base/_prod-line.scss
@@ -20,6 +20,10 @@
     transition: .2s;
     z-index: 1;
 
+    @include media($screen-small) {
+      z-index: 0;
+    }
+
     &.is-visible {
       left: 0;
       opacity: 1;
@@ -162,7 +166,7 @@
     display: flex;
 
     @include media($screen-small) {
-      flex-direction: column-reverse;
+      flex-direction: column;
       height: 100vh;
       position: relative;
     }
@@ -189,7 +193,7 @@
     transition: .2s opacity;
 
     @include media($screen-small) {
-      height: auto;
+      height: 70vh;
       left: 52%;
       margin-left: 0;
       padding-right: 0;
@@ -203,6 +207,10 @@
 
     &--invisible {
       visibility: hidden;
+
+      @include media($screen-small) {
+        display: none;
+      }
     }
 
     &.is-active {
