--- a/_sass/base/_testimonial.scss
+++ b/_sass/base/_testimonial.scss
@@ -10,7 +10,7 @@
 
     @include media($screen-small) {
       line-height: 1.3;
-      padding: 20px 40px;
+      padding: 70px 40px 0;
     }
 
     &::before,
